--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   "author": "Scott Hurlow <scott.hurlow@galvanize.com>",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "knex": "^0.12.6",
+    "morgan": "^1.7.0",
     "pg": "^6.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
