--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt-as-promised": "^1.1.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "humps": "^2.0.0",
     "knex": "^0.12.6",
     "morgan": "^1.7.0",
     "pg": "^6.1.2"
